Versão de produção

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-        <meta name="theme-color" content="#ffffff">
         
-        <title>Sorteio Ciab</title>
+        <title>Cadastro CIAB</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -23,7 +20,6 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/manifest.json">
         
         <link href="vendor/twbs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="css/layout.css" rel="stylesheet" type="text/css">
@@ -50,14 +46,14 @@
                             <div class="col-md-6 col-sm-6">
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <input class="form-control" name="email" id="email" value="" type="email" placeholder="Email Corporativo">
+                                    <input class="form-control" name="email" id="email" value="" type="text" placeholder="Email Corporativo">
                                 </div>
                             </div>
 
                             <div class="col-md-6  col-sm-6">
                                 <div class="form-group">
                                     <label for="telefone">Telefone:</label>
-                                    <input class="form-control" name="telefone" id="telefone" value="" type="tel" placeholder="(00) 0000-0000">
+                                    <input class="form-control" name="telefone" id="telefone" value="" type="text" placeholder="(00) 0000-0000">
                                 </div>
                             </div>
                         </div>
@@ -84,7 +80,8 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-6">
                                 <label>Área</label>
-                                <select class="form-control">
+                                <select id="area" class="form-control">
+                                    <option value="" selected="selected">Selecione</option>
                                     <option value="TI">TI</option>
                                     <option value="Operações">Operações</option>
                                     <option value="Negócios">Negócios</option>
@@ -93,7 +90,7 @@
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <label>&nbsp;</label>
-                                <input class="form-control" type="text">
+                                <input id="area-outros" name="area-outros" class="form-control" type="text">
                             </div>
                         </div>
                         <p>&nbsp;</p>
@@ -102,18 +99,18 @@
                                 <div class="form-group">
                                     <label>Setor</label>
                                     <div class="checkbox">
-                                        <label><input type="checkbox" name="solucoes" id="checkbox-1a" class="" />Bancos</label>
+                                        <label><input type="checkbox" name="setores[]" value="Bancos" />Bancos</label>
                                     </div>
                                     <div class="checkbox">
-                                        <label><input type="checkbox" name="solucoes" id="checkbox-1a" class="" />Seguros</label>
+                                        <label><input type="checkbox" name="setores[]" value="Seguros" />Seguros</label>
                                     </div>
                                     <div class="checkbox">
-                                        <label><input type="checkbox" name="solucoes" id="checkbox-1a" class="" />Meios de pagamento</label>
+                                        <label><input type="checkbox" name="setores[]" value="Meios de Pagamento" />Meios de pagamento</label>
                                     </div>
                                     <div class="checkbox">
-                                        <label><input type="checkbox" name="solucoes" id="checkbox-1a" class="" />Outros</label>
+                                        <label><input type="checkbox" name="setores[]" id="setores-outros-checkbox" />Outros</label>
                                     </div>
-                                <input class="form-control" type="text">
+                                    <input id="setores-outros-input" class="form-control" type="text">
                                 </div>
                             </div>
 
@@ -121,16 +118,31 @@
                                 <label>Quais soluções da Indra você tem interesse</label>
 
                                 <div class="checkbox">
-                                    <label><input type="checkbox" name="solucoes" id="checkbox-1a" class="" />Solução 01</label>
+                                    <label><input type="checkbox" name="solucoes[]" value="Social Media Command Center" />Social Media Command Center</label>
                                 </div>
                                 <div class="checkbox">
-                                    <label><input type="checkbox" name="solucoes" id="checkbox-1a" class="" />Solução 02</label>
+                                    <label><input type="checkbox" name="solucoes[]" value="BPO" />BPO</label>
                                 </div>
                                 <div class="checkbox">
-                                    <label><input type="checkbox" name="solucoes" id="checkbox-1a" class="" />Solução 03</label>
+                                    <label><input type="checkbox" name="solucoes[]" value="Sofia 2" />Sofia 2</label>
                                 </div>
                                 <div class="checkbox">
-                                    <label><input type="checkbox" name="solucoes" id="checkbox-1a" class="" />Solução 04</label>
+                                    <label><input type="checkbox" name="solucoes[]" value="Contratação Mobile Digital" />Contratação Mobile Digital</label>
+                                </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" name="solucoes[]" value="Mobile Banking" />Mobile Banking</label>
+                                </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" name="solucoes[]" value="Banca Contextual" />Banca Contextual</label>
+                                </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" name="solucoes[]" value="Consultoria" />Consultoria</label>
+                                </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" name="solucoes[]" value="Outsourcing" />Outsourcing</label>
+                                </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" name="solucoes[]" value="Fabricas X" />Fábricas X</label>
                                 </div>
                             </div>
                         </div>
